@@ -8,6 +8,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Implement email notifications on new systems added
 - phoromatic: Allow easily comparing a result file to other results for that given schedule ID
 - phoromatic: Improve formatting of lists
+- phoromatic: Add times viewed to results
 - pts_Graph: Shrink size of sub-title text strings when they're too long
 
 Phoronix Test Suite 5.4 Milestone 4
